--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/portfolio_2.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
       <title>Portfolio</title>
    </head>
    <body>
@@ -57,6 +58,7 @@
          <div class="main-content">
             <h1>Deniel Salvacion</h1>
             <h2>Front End <span>Developer</span></h2>
+            <a href="https://drive.google.com/file/d/15WPe1WzCJx4OOsVAAPllVHDbZ3RsKXzG/view?usp=sharing" class="btn">Download my resume</a>
          </div>
       </div>
       <!-- <div class="about-me section">
@@ -163,6 +165,56 @@
             </div>
          </div>
       </div>
+
+      <!-- <div class="container ">
+         <div class="details">
+            <h2>Contact Me</h2>
+         </div>
+      </div> -->
+      <!-- <div class="contact-grid container section">
+         <div>
+            <img src="img/tenor.gif" alt="">
+         </div>
+         <div class="social-links">
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, voluptatibus.</p>
+            <a href="https://www.linkedin.com/in/deniel-salvacion-75aba31b4/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Denyyel914"><i class="fab fa-github-square"></i></a>
+            <a href=""><i class="fab fa-linkedin"></i></a>
+         </div>
+      </div> -->
+
+      <div class="wrapper-2 section">
+         <div class="container">
+            <div class="details">
+               <h2>Contact Me</h2>
+            </div>
+            <div class="contact-grid">
+               <div>
+                  <img src="img/tenor.gif" alt="">
+               </div>
+               <div class="social-links">
+                  <h2>Discuss something?</h2>
+                  <p>Email: denielsalvacion@gmail.com</p>
+                  <p>Address: Philippines</p>
+                  <p>Contact: +63 961 039 2529</p>
+                  <!-- <a href="https://www.linkedin.com/in/deniel-salvacion-75aba31b4/"><i class="fab fa-linkedin"></i></a>
+                  <p>www.facebook.com/richerpicture</p>
+                  <a href="https://github.com/Denyyel914"><i class="fab fa-github-square"></i></a>
+                  <a href="https://twitter.com/Denyyel"><i class="fab fa-twitter-square"></i></a> -->
+                  <div>
+                     <h2>Feel free to get in touch</h2>
+                     <a href="https://twitter.com/Denyyel"><i class="fab fa-twitter-square tw"></i></a>
+                     <a href="https://github.com/Denyyel914"><i class="fab fa-github-square github"></i></a>
+                     <a href="https://www.linkedin.com/in/deniel-salvacion-75aba31b4/"><i class="fab fa-linkedin link"></i></a>
+                     <a href="https://www.facebook.com/denyyelkid/"><i class="fab fa-facebook-square fb"></i></a>
+                     <a href="https://www.instagram.com/denyyel/"><i class="fab fa-instagram-square ig"></i></a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      
       <footer>
          <p>© Copyright Deniel Salvacion Portfolio 2020</p>
       </footer>
