--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
              <li><a href="#" class="nav-list-item">Contact</a></li>
          </ul>
          </header> -->
-      <div class="main">
+      <div class="main" id="Home">
          <header>
             <div class="logo">
                <h3>Deniel Salvacion</h3>
             </div>
             <ul class="nav-list">
-               <li><a href="#" class="nav-list-item">Home</a></li>
-               <li><a href="#" class="nav-list-item">About</a></li>
-               <li><a href="#" class="nav-list-item">Projects</a></li>
-               <li><a href="#" class="nav-list-item">Contact</a></li>
+               <li><a href="#Home" class="nav-list-item">Home</a></li>
+               <li><a href="#About" class="nav-list-item">About</a></li>
+               <li><a href="#Projects" class="nav-list-item">Projects</a></li>
+               <li><a href="#Contact" class="nav-list-item">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="div-1"></div>
@@ -101,7 +101,7 @@
              </div>
          </div>
          </div> -->
-      <div class="container section">
+      <div class="container section" id="About">
          <div class="details">
             <h2>About me</h2>
          </div>
@@ -134,7 +134,7 @@
             </div>
          </div>
       </section>
-      <div class="wrapper">
+      <div class="wrapper" id="Projects">
          <div class="container section">
             <div class="details">
                <h2>Projects</h2>
@@ -184,7 +184,7 @@
          </div>
       </div> -->
 
-      <div class="wrapper-2 section">
+      <div class="wrapper-2 section" id="Contact">
          <div class="container">
             <div class="details">
                <h2>Contact Me</h2>
