--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
          </div>
          <div class="div2">
             <p>I'm an aspiring Front End Developer who loves to learn and to improve my skills.</p>
-            <p>I love to build cool stuffs to showcase my skills.</p>
-            <p>I studied and graduated with bachelor's degree of information technology at Far Eastern University.</p>
+            <p>I love to build cool stuff to showcase my skills.</p>
+            <p> I graduated from Far Eastern University with a Bachelor's degree in Information Technology.</p>
             <div class="margin-2">
-               <p>Since Graduating this year in the middle of pandemic, I'm self studying skills to prepare myself for a job.</p>
+               <p>I was supposed to graduate this year. However, a pandemic occurred.But while waiting for my graduation, I'm self studying skills to prepare myself for a job.</p>
                <p class="bold">Here are some technologies I've been working and improving with recently</p>
                <div class="grid-ul">
                   <ul>
