--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <a href="https://github.com/Denyyel914"><i class="fab fa-github-square"></i></a>
                   <a href="https://twitter.com/Denyyel"><i class="fab fa-twitter-square"></i></a> -->
                   <div>
-                     <h2>Feel free to get in touch</h2>
+                     <h2>Get in touch</h2>
                      <a href="https://twitter.com/Denyyel"><i class="fab fa-twitter-square tw"></i></a>
                      <a href="https://github.com/Denyyel914"><i class="fab fa-github-square github"></i></a>
                      <a href="https://www.linkedin.com/in/deniel-salvacion-75aba31b4/"><i class="fab fa-linkedin link"></i></a>
